# rges_pit_pipeline_tools

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/source/: conf.py  index.md
docs/source/smce/: basic_jobs.md  first_time_setup.md  index.md  platform_overview.md
scripts/: go_scme_set_up_script.sh  rges_pit_scme_run_setup_script_command.sh  rges_pit_scme_setup_script.sh
