[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rges-pit-pipeline-tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "golmschenk", email = "greg@olmschenk.com" },
]
dependencies = [
  'furo',
  'sphinx',
  'myst-parser',
]

[project.urls]
Documentation = "https://github.com/golmschenk/rges-pit-pipeline-tools#readme"
Issues = "https://github.com/golmschenk/rges-pit-pipeline-tools/issues"
Source = "https://github.com/golmschenk/rges-pit-pipeline-tools"

[tool.hatch.version]
path = "src/rges_pit_pipeline_tools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rges_pit_pipeline_tools tests}"

[tool.coverage.run]
source_pkgs = ["rges_pit_pipeline_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/rges_pit_pipeline_tools/__about__.py",
]

[tool.coverage.paths]
rges_pit_pipeline_tools = ["src/rges_pit_pipeline_tools", "*/rges-pit-pipeline-tools/src/rges_pit_pipeline_tools"]
tests = ["tests", "*/rges-pit-pipeline-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
